--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Geng Alex Akook - Portfolio</title>
+<title>Geng Alex Akook - IT Portfolio & Google Ads Certified</title>
+
+<!-- SEO Meta Tags -->
+<meta name="description" content="Geng Alex Akook - Final-year IT student specializing in IT support, Python programming, and Google Ads search campaigns. Portfolio, projects, and certifications.">
+<meta name="keywords" content="Geng Alex Akook, IT student, IT support, Google Ads, Python, IT projects, CV, Resume">
+<meta name="author" content="Geng Alex Akook">
+
+<!-- Open Graph / Social Media -->
+<meta property="og:title" content="Geng Alex Akook - IT Portfolio & Google Ads Certified">
+<meta property="og:description" content="Explore Geng Alex Akook's portfolio, IT projects, skills, and certifications in IT support and digital marketing.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="profile.jpg">
+<meta property="og:url" content="https://gengalex.github.io/your-portfolio-link">
+
 <link rel="stylesheet" href="style.css">
+<link rel="canonical" href="https://gengalex.github.io/your-portfolio-link">
+
+<!-- Structured Data for Google -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Geng Alex Akook",
+  "url": "https://gengalex.github.io/your-portfolio-link",
+  "sameAs": [
+    "https://www.linkedin.com/in/geng-alex-akook-467a39250"
+  ],
+  "image": "https://gengalex.github.io/your-portfolio-link/profile.jpg",
+  "jobTitle": "Final-year IT Student, IT Support Specialist, Google Ads Certified",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "ISBAT University"
+  },
+  "email": "mailto:gengalex32@gmail.com",
+  "telephone": "+256770351344",
+  "description": "I am Geng Alex Akook, a final-year Applied Information Technology student at ISBAT University, Uganda. I specialize in IT support, system administration, Python programming, and digital marketing. Google Ads Search Certified.",
+  "hasCredential": [
+    {
+      "@type": "EducationalOccupationalCredential",
+      "name": "Google Ads Search Certification",
+      "credentialCategory": "Certificate",
+      "url": "https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705"
+    }
+  ],
+  "hasOccupation": {
+    "@type": "Occupation",
+    "name": "IT Support Specialist",
+    "description": "Providing IT support, troubleshooting, system setup, network configuration, and digital marketing services."
+  },
+  "knowsAbout": [
+    "IT Support & Troubleshooting",
+    "System Administration & Configuration",
+    "Python Programming & Automation",
+    "Google Ads Campaign Management",
+    "Problem-Solving & Communication"
+  ],
+  "hasProject": [
+    {
+      "@type": "CreativeWork",
+      "name": "Real-Time Face Mask Detection System",
+      "description": "Developed using Python, OpenCV, and TensorFlow. Detects faces with/without masks in real-time and provides alerts for safety compliance.",
+      "image": "https://gengalex.github.io/your-portfolio-link/face_mask_project.png"
+    },
+    {
+      "@type": "CreativeWork",
+      "name": "Freelance IT Support",
+      "description": "Provided troubleshooting, system setup, and hardware/software support for clients. Assisted in labs and solved network connectivity issues.",
+      "image": "https://gengalex.github.io/your-portfolio-link/it_support_project.jpg"
+    }
+  ]
+}
+</script>
+
 </head>
 <body>
 
@@ -24,8 +95,8 @@
 
 <section id="about">
 <h2>About Me</h2>
-<img src="profile.jpg" alt="Geng Alex Akook" class="profile-photo">
-<p>I am a final-year Applied Information Technology student at ISBAT University, Uganda. I specialize in IT support and digital solutions, with hands-on experience in troubleshooting, system administration, and Python projects. I recently earned the Google Ads Search Certification, demonstrating my digital marketing skills.</p>
+<img src="profile.jpg" alt="Geng Alex Akook - IT Student" class="profile-photo">
+<p>I am Geng Alex Akook, a final-year Applied Information Technology student at ISBAT University, Uganda. I specialize in IT support, system administration, Python programming, and digital marketing. I hold the Google Ads Search Certification, highlighting my expertise in managing effective online campaigns.</p>
 </section>
 
 <section id="skills">
@@ -41,39 +112,40 @@
 
 <section id="projects">
 <h2>Projects & Experiences</h2>
-<div class="project">
+<article class="project">
 <h3>Real-Time Face Mask Detection System</h3>
-<img src="face_mask_project.png" alt="Face Mask Detection Project" class="project-photo">
+<img src="face_mask_project.png" alt="Face Mask Detection Project by Geng Alex Akook" class="project-photo">
 <p>Developed using Python, OpenCV, and TensorFlow. Detects faces with/without masks in real-time and provides alerts for safety compliance.</p>
-</div>
-<div class="project">
+</article>
+
+<article class="project">
 <h3>Freelance IT Support</h3>
-<img src="it_support_project.jpg" alt="IT Support Work" class="project-photo">
-<p>Provided troubleshooting, system setup, and hardware/software support for clients. Assisted in labs and solved network connectivity issues. (Windows updates, printer issues, phone/computer unlocking, network setup, satellite dish installations, solar system assistance, photography and video editing for events.)</p>
-</div>
+<img src="it_support_project.jpg" alt="IT Support Work by Geng Alex Akook" class="project-photo">
+<p>Provided troubleshooting, system setup, and hardware/software support for clients. Assisted in labs and solved network connectivity issues, including Windows updates, printer issues, phone/computer unlocking, network setup, satellite dish installations, solar system assistance, and photography/video editing for events.</p>
+</article>
 </section>
 
 <section id="certifications">
 <h2>Certifications</h2>
 <p>Google Ads Search Certification – Skillshop (2025)</p>
-<p>Certificate Link: <a href="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705" target="_blank">https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705</a></p>
+<p>View Certificate: <a href="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705" target="_blank" rel="noopener noreferrer">Certificate Link</a></p>
 </section>
 
 <section id="downloads">
 <h2>Download Documents</h2>
 <ul>
-<li><a href="Geng_Alex_Akook_CV.pdf" target="_blank">Download My CV</a></li>
-<li><a href="Geng_Alex_Akook_Resume.pdf" target="_blank">Download My Resume</a></li>
-<li><a href="Google_Ads_Certificate.pdf" target="_blank">Download Google Ads Certificate</a></li>
-<li><a href="Face_Mask_Project_Report.pdf" target="_blank">Download Project Documentation</a></li>
+<li><a href="Geng_Alex_Akook_CV.pdf" target="_blank" rel="noopener noreferrer">Download My CV</a></li>
+<li><a href="Geng_Alex_Akook_Resume.pdf" target="_blank" rel="noopener noreferrer">Download My Resume</a></li>
+<li><a href="Google_Ads_Certificate.pdf" target="_blank" rel="noopener noreferrer">Download Google Ads Certificate</a></li>
+<li><a href="Face_Mask_Project_Report.pdf" target="_blank" rel="noopener noreferrer">Download Project Documentation</a></li>
 </ul>
 </section>
 
 <section id="contact">
 <h2>Contact</h2>
-<p>Email: gengalex32@gmail.com</p>
+<p>Email: <a href="mailto:gengalex32@gmail.com">gengalex32@gmail.com</a></p>
 <p>Phone: +256770351344 / +211921135404</p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/geng-alex-akook-467a39250" target="_blank">https://www.linkedin.com/in/geng-alex-akook-467a39250</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/geng-alex-akook-467a39250" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/geng-alex-akook-467a39250</a></p>
 </section>
 
 <footer>
@@ -82,3 +154,4 @@
 
 </body>
 </html>
+
