--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <meta property="og:title" content="Geng Alex Akook - IT Portfolio & Google Ads Certified">
 <meta property="og:description" content="Explore Geng Alex Akook's portfolio, IT projects, skills, and certifications in IT support and digital marketing.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="profile.jpg">
-<meta property="og:url" content="https://gengalex.github.io/your-portfolio-link">
+<meta property="og:image" content="https://gengalex.github.io/profile.jpg">
+<meta property="og:url" content="https://gengalex.github.io/">
 
 <link rel="stylesheet" href="style.css">
-<link rel="canonical" href="https://gengalex.github.io/your-portfolio-link">
+<link rel="canonical" href="https://gengalex.github.io/">
 
 <!-- Structured Data for Google -->
 <script type="application/ld+json">
@@ -26,11 +26,11 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Geng Alex Akook",
-  "url": "https://gengalex.github.io/your-portfolio-link",
+  "url": "https://gengalex.github.io/",
   "sameAs": [
     "https://www.linkedin.com/in/geng-alex-akook-467a39250"
   ],
-  "image": "https://gengalex.github.io/your-portfolio-link/profile.jpg",
+  "image": "https://gengalex.github.io/profile.jpg",
   "jobTitle": "Final-year IT Student, IT Support Specialist, Google Ads Certified",
   "worksFor": {
     "@type": "Organization",
@@ -64,13 +64,13 @@
       "@type": "CreativeWork",
       "name": "Real-Time Face Mask Detection System",
       "description": "Developed using Python, OpenCV, and TensorFlow. Detects faces with/without masks in real-time and provides alerts for safety compliance.",
-      "image": "https://gengalex.github.io/your-portfolio-link/face_mask_project.png"
+      "image": "https://gengalex.github.io/face_mask_project.png"
     },
     {
       "@type": "CreativeWork",
       "name": "Freelance IT Support",
       "description": "Provided troubleshooting, system setup, and hardware/software support for clients. Assisted in labs and solved network connectivity issues.",
-      "image": "https://gengalex.github.io/your-portfolio-link/it_support_project.jpg"
+      "image": "https://gengalex.github.io/it_support_project.jpg"
     }
   ]
 }
@@ -154,4 +154,3 @@
 
 </body>
 </html>
-
