--- a/index.html
+++ b/index.html
@@ -1,146 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Geng Alex Akok - IT Portfolio</title>
-  <meta name="description" content="Portfolio of Geng Alex Akok - IT Support Specialist, Google Ads Certified, and Final Year Student. Explore my projects, certifications, resume, and contact details.">
-  <meta name="keywords" content="Geng Alex Akok, IT Support, Google Ads, Portfolio, Network Administrator, Face Mask Project, Resume, CV">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Geng Alex Akook - IT Portfolio & Google Ads Certified</title>
 
-  <!-- Open Graph (Facebook/LinkedIn) -->
-  <meta property="og:title" content="Geng Alex Akok - IT Portfolio">
-  <meta property="og:description" content="Explore my projects, IT skills, certifications, and CV.">
-  <meta property="og:image" content="https://gengalex.github.io/profile.jpg">
-  <meta property="og:url" content="https://gengalex.github.io/">
-  <meta property="og:type" content="website">
+<!-- SEO Meta Tags -->
+<meta name="description" content="Geng Alex Akook - Final-year IT student specializing in IT support, Python programming, and Google Ads search campaigns. Portfolio, projects, and certifications.">
+<meta name="keywords" content="Geng Alex Akook, IT student, IT support, Google Ads, Python, IT projects, CV, Resume">
+<meta name="author" content="Geng Alex Akook">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Geng Alex Akok - IT Portfolio">
-  <meta name="twitter:description" content="Explore my projects, IT skills, and certifications.">
-  <meta name="twitter:image" content="https://gengalex.github.io/profile.jpg">
+<!-- Open Graph / Social Media -->
+<meta property="og:title" content="Geng Alex Akook - IT Portfolio & Google Ads Certified">
+<meta property="og:description" content="Explore Geng Alex Akook's portfolio, IT projects, skills, and certifications in IT support and digital marketing.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="profile.jpg">
+<meta property="og:url" content="https://gengalex.github.io/">
 
-  <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="style.css">
+<link rel="canonical" href="https://gengalex.github.io/">
 
-  <!-- Structured Data (Schema.org) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Geng Alex Akok",
-    "url": "https://gengalex.github.io/",
-    "image": "https://gengalex.github.io/profile.jpg",
-    "sameAs": [
-      "https://www.linkedin.com/in/gengalex",
-      "https://github.com/gengalex"
-    ],
-    "jobTitle": "IT Support Specialist",
-    "worksFor": {
-      "@type": "Organization",
-      "name": "AMC General Trading Co. LTD"
+<!-- Structured Data for Google -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Geng Alex Akook",
+  "url": "https://gengalex.github.io/",
+  "sameAs": [
+    "https://www.linkedin.com/in/geng-alex-akook-467a39250"
+  ],
+  "image": "https://gengalex.github.io/profile.jpg",
+  "jobTitle": "Final-year IT Student, IT Support Specialist, Google Ads Certified",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "ISBAT University"
+  },
+  "email": "mailto:gengalex32@gmail.com",
+  "telephone": "+256770351344",
+  "description": "I am Geng Alex Akook, a final-year Applied Information Technology student at ISBAT University, Uganda. I specialize in IT support, system administration, Python programming, and digital marketing. Google Ads Search Certified.",
+  "hasCredential": [
+    {
+      "@type": "EducationalOccupationalCredential",
+      "name": "Google Ads Search Certification",
+      "credentialCategory": "Certificate",
+      "url": "https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705"
+    }
+  ],
+  "hasOccupation": {
+    "@type": "Occupation",
+    "name": "IT Support Specialist",
+    "description": "Providing IT support, troubleshooting, system setup, network configuration, and digital marketing services."
+  },
+  "knowsAbout": [
+    "IT Support & Troubleshooting",
+    "System Administration & Configuration",
+    "Python Programming & Automation",
+    "Google Ads Campaign Management",
+    "Problem-Solving & Communication"
+  ],
+  "hasProject": [
+    {
+      "@type": "CreativeWork",
+      "name": "Real-Time Face Mask Detection System",
+      "description": "Developed using Python, OpenCV, and TensorFlow. Detects faces with/without masks in real-time and provides alerts for safety compliance.",
+      "image": "https://gengalex.github.io/face_mask_project.png"
     },
-    "alumniOf": {
-      "@type": "CollegeOrUniversity",
-      "name": "AIT Program"
+    {
+      "@type": "CreativeWork",
+      "name": "Freelance IT Support",
+      "description": "Provided troubleshooting, system setup, and hardware/software support for clients. Assisted in labs and solved network connectivity issues.",
+      "image": "https://gengalex.github.io/it_support_project.jpg"
     }
-  }
-  </script>
+  ]
+}
+</script>
 
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background: #222; color: #fff; padding: 20px; text-align: center; }
-    section { padding: 40px; max-width: 900px; margin: auto; }
-    h2 { border-bottom: 2px solid #ddd; padding-bottom: 10px; }
-    .projects, .certs, .downloads { display: grid; gap: 15px; }
-    .card { padding: 15px; border: 1px solid #ddd; border-radius: 10px; }
-    footer { background: #222; color: #fff; text-align: center; padding: 20px; }
-    .contact-form { max-width: 500px; margin: auto; }
-    .contact-form input, .contact-form textarea {
-      width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc;
-    }
-    .contact-form button { background: #222; color: #fff; padding: 10px 20px; border: none; cursor: pointer; }
-  </style>
 </head>
 <body>
 
-  <header>
-    <h1>Geng Alex Akok</h1>
-    <p>IT Support | Google Ads Certified | Final Year AIT Student</p>
-  </header>
+<header>
+<h1>Geng Alex Akook</h1>
+<p>Final-year IT Student | IT Support & Google Ads Certified</p>
+</header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hello, I am <strong>Geng Alex Akok</strong>, a passionate IT Support Specialist and Google Ads Certified professional. 
-       I am in my final year of the AIT program and aim to specialize as a Network Administrator. 
-       I focus on building scalable IT solutions and digital systems that improve efficiency in both small and large organizations.</p>
-  </section>
+<nav>
+<a href="#about">About</a>
+<a href="#skills">Skills</a>
+<a href="#projects">Projects</a>
+<a href="#certifications">Certifications</a>
+<a href="#downloads">Downloads</a>
+<a href="#contact">Contact</a>
+</nav>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>IT Support & Troubleshooting</li>
-      <li>Networking (LAN, WAN, Cisco)</li>
-      <li>Google Ads Search Certified</li>
-      <li>Web Development (HTML, CSS, JavaScript)</li>
-      <li>Python, OpenCV, TensorFlow</li>
-      <li>Database Management</li>
-    </ul>
-  </section>
+<section id="about">
+<h2>About Me</h2>
+<img src="profile.jpg" alt="Geng Alex Akook - IT Student" class="profile-photo">
+<p>I am Geng Alex Akook, a final-year Applied Information Technology student at ISBAT University, Uganda. I specialize in IT support, system administration, Python programming, and digital marketing. I hold the Google Ads Search Certification, highlighting my expertise in managing effective online campaigns.</p>
+</section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>Real-Time Face Mask Detection System</h3>
-        <p>Developed using Python, OpenCV, TensorFlow, and Tkinter. Works offline, detects masks, multiple faces, and supports alerts.</p>
-        <a href="Face_Mask_Project_Report.pdf" download>Download Project Report</a>
-      </div>
-      <div class="card">
-        <h3>Custom Phone Charging Counter</h3>
-        <p>A system designed to handle charging for 100 phones daily with automatic counting and fast charging capability.</p>
-      </div>
-    </div>
-  </section>
+<section id="skills">
+<h2>Skills</h2>
+<ul>
+<li>IT Support & Troubleshooting</li>
+<li>System Administration & Configuration</li>
+<li>Python Programming & Automation</li>
+<li>Google Ads Campaign Management</li>
+<li>Problem-Solving & Communication</li>
+</ul>
+</section>
 
-  <section id="certifications">
-    <h2>Certifications</h2>
-    <div class="certs">
-      <div class="card">Google Ads Search Certification</div>
-      <div class="card">IT Support Certification</div>
-    </div>
-  </section>
+<section id="projects">
+<h2>Projects & Experiences</h2>
+<article class="project">
+<h3>Real-Time Face Mask Detection System</h3>
+<img src="face_mask_project.png" alt="Face Mask Detection Project by Geng Alex Akook" class="project-photo">
+<p>Developed using Python, OpenCV, and TensorFlow. Detects faces with/without masks in real-time and provides alerts for safety compliance.</p>
+</article>
 
-  <section id="downloads">
-    <h2>Downloads</h2>
-    <div class="downloads">
-      <a href="Geng_Alex_Akook_CV.pdf" download>Download CV</a>
-      <a href="Geng_Alex_Akook_Resume.pdf" download>Download Resume</a>
-      <a href="Google_Ads_Certificate.pdf" download>Download Google Ads Certificate</a>
-    </div>
-  </section>
+<article class="project">
+<h3>Freelance IT Support</h3>
+<img src="it_support_project.jpg" alt="IT Support Work by Geng Alex Akook" class="project-photo">
+<p>Provided troubleshooting, system setup, and hardware/software support for clients. Assisted in labs and solved network connectivity issues, including Windows updates, printer issues, phone/computer unlocking, network setup, satellite dish installations, solar system assistance, and photography/video editing for events.</p>
+</article>
+</section>
 
-  <section id="testimonials">
-    <h2>Testimonials</h2>
-    <div class="card">"Geng Alex has strong problem-solving skills and is dedicated to delivering results." - Colleague</div>
-    <div class="card">"Reliable IT support and excellent teamwork. Highly recommend him." - Mentor</div>
-  </section>
+<section id="certifications">
+<h2>Certifications</h2>
+<p>Google Ads Search Certification – Skillshop (2025)</p>
+<p>View Certificate: <a href="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705" target="_blank" rel="noopener noreferrer">Certificate Link</a></p>
+</section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <div class="contact-form">
-      <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" rows="5" placeholder="Your Message"></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </div>
-  </section>
+<section id="downloads">
+<h2>Download Documents</h2>
+<a href="Geng_Alex_Akook_CV.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download My CV</a>
+<a href="Geng_Alex_Akook_Resume.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download My Resume</a>
+<a href="Google_Ads_Certificate.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download Google Ads Certificate</a>
+<a href="Face_Mask_Project_Report.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download Project Documentation</a>
+</section>
 
-  <footer>
-    <p>&copy; 2025 Geng Alex Akok. All Rights Reserved.</p>
-  </footer>
+<section id="contact">
+<h2>Contact</h2>
+<p>Email: <a href="mailto:gengalex32@gmail.com">gengalex32@gmail.com</a></p>
+<p>Phone: +256770351344 / +211921135404</p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/geng-alex-akook-467a39250" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/geng-alex-akook-467a39250</a></p>
+</section>
+
+<footer>
+<p>&copy; 2025 Geng Alex Akook. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
