--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <a href="#skills">Skills</a>
 <a href="#projects">Projects</a>
 <a href="#certifications">Certifications</a>
-<a href="#downloads">Downloads</a>
+<a href="#documents">Documents</a>
 <a href="#contact">Contact</a>
 </nav>
 
@@ -131,12 +131,20 @@
 <p>View Certificate: <a href="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/159156705" target="_blank" rel="noopener noreferrer">Certificate Link</a></p>
 </section>
 
-<section id="downloads">
-<h2>Download Documents</h2>
-<a href="Geng_Alex_Akook_CV.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download My CV</a>
-<a href="Geng_Alex_Akook_Resume.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download My Resume</a>
-<a href="Google_Ads_Certificate.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download Google Ads Certificate</a>
-<a href="Face_Mask_Project_Report.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">Download Project Documentation</a>
+<section id="documents">
+<h2>View Documents</h2>
+
+<h3>My CV</h3>
+<iframe src="Geng_Alex_Akook_CV.pdf" width="100%" height="600px"></iframe>
+
+<h3>My Resume</h3>
+<iframe src="Geng_Alex_Akook_Resume.pdf" width="100%" height="600px"></iframe>
+
+<h3>Google Ads Certificate</h3>
+<iframe src="Google_Ads_Certificate.pdf" width="100%" height="600px"></iframe>
+
+<h3>Project Documentation</h3>
+<iframe src="Face_Mask_Project_Report.pdf" width="100%" height="600px"></iframe>
 </section>
 
 <section id="contact">
