--- a/index.html
+++ b/index.html
@@ -134,17 +134,11 @@
 <section id="documents">
 <h2>View Documents</h2>
 
-<h3>My CV</h3>
-<iframe src="Geng_Alex_Akook_CV.pdf" width="100%" height="600px"></iframe>
+<p><a href="Geng_Alex_Akook_CV.pdf" target="_blank" rel="noopener noreferrer">View My CV</a></p>
+<p><a href="Geng_Alex_Akook_Resume.pdf" target="_blank" rel="noopener noreferrer">View My Resume</a></p>
+<p><a href="Google_Ads_Certificate.pdf" target="_blank" rel="noopener noreferrer">View My Google Ads Certificate</a></p>
+<p><a href="Face_Mask_Project_Report.pdf" target="_blank" rel="noopener noreferrer">View My Project Documentation</a></p>
 
-<h3>My Resume</h3>
-<iframe src="Geng_Alex_Akook_Resume.pdf" width="100%" height="600px"></iframe>
-
-<h3>Google Ads Certificate</h3>
-<iframe src="Google_Ads_Certificate.pdf" width="100%" height="600px"></iframe>
-
-<h3>Project Documentation</h3>
-<iframe src="Face_Mask_Project_Report.pdf" width="100%" height="600px"></iframe>
 </section>
 
 <section id="contact">
