--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
 </section>
 
 <footer>
+  <!-- LinkedIn Profile Badge -->
+<div style="display: flex; align-items: center; gap: 10px; margin-top: 20px;">
+    <a href="https://www.linkedin.com/in/geng-alex-akok" target="_blank" 
+       style="display: flex; align-items: center; text-decoration: none; color: #0A66C2; font-weight: bold;">
+        <!-- LinkedIn Icon -->
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" 
+             alt="LinkedIn" width="40" height="40" style="margin-right: 8px;">
+        <!-- Badge Text -->
+        <span>Connect with me on LinkedIn</span>
+    </a>
+</div>
+
 <p>&copy; 2025 Geng Alex Akook. All Rights Reserved.</p>
 </footer>
 
