--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <h2>Contact</h2>
 <p>Email: <a href="mailto:gengalex32@gmail.com">gengalex32@gmail.com</a></p>
 <p>Phone: +256770351344 / +211921135404</p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/geng-alex-akook-467a39250" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/geng-alex-akook-467a39250</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/geng-alex-akook" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/geng-alex-akook-467a39250</a></p>
 </section>
 
 <footer>
