--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 <p>Email: <a href="mailto:gengalex32@gmail.com">gengalex32@gmail.com</a></p>
 <p>Phone: +256770351344 / +211921135404</p>
 <p>LinkedIn: <a href="https://www.linkedin.com/in/geng-alex-akook" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/geng-alex-akook</a></p>
+<a href="https://www.facebook.com/geng.alex.akook" target="_blank">Follow me on Facebook</a>
+
 </section>
 
 <footer>
